AskQuestionPane as parent class for all game modes. Code cleanup with updated comments. The card mode now detects if the word is found. Mistake counter added in CardsAskQuestionPane.